--- a/web/public/index.html
+++ b/web/public/index.html
@@ -8,6 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Plataforma de Vídeos</title>
   </head>
